[package]
name = "didcomm-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
ring = "0.16"
ed25519-dalek = "1.0"
x25519-dalek = "1.2"
chacha20poly1305 = "0.9"
bip39 = "1.0"
hdwallet = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "didcomm_sdk"
crate-type = ["cdylib", "rlib"]